changed flex direction to column for carousels on tbr page

--- a/rmd.css
+++ b/rmd.css
@@ -167,4 +167,8 @@
     #aboutpage .information img {
         margin-left: 120px;
     }
+
+    #tbr .carousel-containertbr {
+        flex-direction: column;
+    }
 }
