adjusted width on tbr

--- a/rmd.css
+++ b/rmd.css
@@ -171,4 +171,8 @@
     #tbr .carousel-containertbr {
         flex-direction: column;
     }
+
+    #tbr .carouseltbr {
+        width: 370px;
+    }
 }
