--- a/tbr.css
+++ b/tbr.css
@@ -136,6 +136,10 @@ h4 {
     font-size: 25px;
 }
 
+.tbrtocome {
+    text-align: center;
+}
+
 footer {
     background-color: white;
     display: flex;
