--- a/style.css
+++ b/style.css
@@ -238,7 +238,7 @@ input[type="radio"]:checked + label {
     z-index: 1;
     border-top-left-radius: 25%;
     border-top-right-radius: 25%;
-    border-top: 2px solid whitesmoke;
+    border-top: 2px solid #f5f5f5;
     animation: pulse 6s infinite;
 }
 
